[package]
name = "mind_control"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["procedural_macros"]

[dependencies]
procedural_macros = { path = "procedural_macros" }
clunky = { path = "../Clunky/clunky" }
png = "0.17.10"
rand = "0.8.5"
rayon = "1.8.1"
vulkano = "0.34.0"
vulkano-shaders = "0.34.0"
vulkano-win = "0.34.0"
vulkano-util = "0.34.0"
winit = "0.28.6"
gilrs = "0.10.7"
glam = "0.28.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ahash = "0.8.11"
